# Knowledge-Agent

./: IngestAgent.py  IngestCodeAgent.py  README.md  Server.py  pyproject.toml  requirements.txt
Agents/: KnowledgeGraph.py  lmstudioAI.py  readPDF.py  readPDFv2.py
Agents/.artifacts/: graph_after_remember.html
Prompts/: Ingest.md  Lint.md  Query.md  Rules.md
Prompts/Code base/: Ingest.md  Query.md  Rules.md
Tools/: CreateFile.py  EditFile.py  Query.py  ReadFile.py  ReadPDF.py
Tools/Codebase_tools/: CreateFile.py
