[project]
name = "knowledge-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cognee>=1.1.2",
    "docling>=2.99.0",
    "dotenv>=0.9.9",
    "fastmcp>=3.4.2",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "pillow>=12.2.0",
    "pyvis>=0.3.2",
]
